--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "TO-DO List",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "build": "cross-env NODE_ENV=production webpack -p --colors",
+    "start": "babel-node --max_old_space_size=4096 server.js",
+    "dev": "concurrently \"nodemon server.js\" \"webpack -w\" "
   },
   "author": "haroldjcastillo",
   "license": "ISC",
@@ -12,9 +14,33 @@
     "angular": "^1.6.5",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "jshint": "^2.9.5",
+    "jshint-loader": "^0.8.4",
     "method-override": "^2.3.9",
     "mongoose": "^4.11.10",
     "morgan": "^1.8.2",
     "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "jsxobj": "^1.1.0",
+    "node-sass": "^4.5.3",
+    "nodemon": "^1.12.0",
+    "optimize-css-assets-webpack-plugin": "^3.1.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.6",
+    "webpack-dev-server": "^2.7.1"
   }
 }
